# funnelier

./: -  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  alembic.ini  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 08415702d6c3_phase_21_add_notifications_and_.py  0e2bd9f452fe_phase_23_add_audit_logs.py  2ed2da912eae_phase_11_add_campaigns_tables.py  a1b2c3d4e5f6_phase_8_add_username_to_tenant_users.py  a30b1c2d3e4f_phase_30_performance_indexes.py  b0a6f0d6de83_phase_7_add_funnel_snapshots_alert_.py  b1c2d3e4f5a6_phase_33_campaign_process_instance_id.py  b1c2d3e4f5a6_phase_38_segment_rules.py  c2d3e4f5a6b7_phase_34_user_approval_process_id.py  d52d478e2875_add_is_approved_column_to_tenant_users.py  d5d239dd9f6a_initial_schema.py  f18a0b1c2d3e_phase_18_add_sms_parts_column.py
docker/: .env.production.example  Dockerfile  Dockerfile.frontend  docker-compose.prod.yml  docker-compose.yml
docs/: API_AUDIT.md  ARCHITECTURE.md  CAMUNDA_FEASIBILITY.md  GETTING_STARTED.md  GIT_STRATEGY.md  IMPLEMENTATION_SUMMARY.md  ROADMAP.md  TEST_COVERAGE_GAP_ANALYSIS.md
frontend/: next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: auth.spec.ts  helpers.ts  i18n.spec.ts  imports.spec.ts  leads.spec.ts  navigation.spec.ts
frontend/messages/: en.json  fa.json
frontend/public/: manifest.json  sw.js
frontend/src/: middleware.ts
k8s/base/: api-deployment.yaml  celery-deployment.yaml  configmap.yaml  frontend-deployment.yaml  hpa.yaml  ingress.yaml  migration-job.yaml  namespace.yaml
leads-numbers/لید میلگرد کل کشور/: ~$لید خراسان رضوی- کاوه نگار.xlsx  آذربایجان شرقی.xlsx  آذربایجان غربی.xlsx  اردبیل.xlsx  اصفهان.xlsx  البرز.xlsx  ایلام.xlsx  بوشهر.xlsx  تهران.xlsx  خراسان جنوبی.xlsx  خراسان رضوی.xlsx  خراسان شمالی.xlsx  خوزستان.xlsx  زنجان.xlsx  سمنان.xlsx  سیستان و بلوچستان.xlsx  فارس.xlsx  قزوین.xlsx  قم.xlsx  لرستان.xlsx  لید اذربایجان شرقی-کاوه نگار.xlsx  لید اذربایجان غربی- کاوه نگار.xlsx  لید اردبیل-کاوه نگار.xlsx  لید البرز- کاوه نگار.xlsx  لید ایلام- کاوه نگار.xlsx  لید بافق جنوب.xlsx  مازندران.xlsx  مرکزی.xlsx  هرمزگان.xlsx  همدان.xlsx  چهارمحال وبختیاری.xlsx  کردستان.xlsx  کرمان.xlsx  کرمانشاه.xlsx  کهگیلویه و بویر احمد.xlsx  گلستان.xlsx  گیلان.xlsx  یزد.xlsx
leads-numbers/مصالح فروش های کل کشور/: آذربایجان غربی.xlsx  اذربایجان شرقی.xlsx  اردبیل.xlsx  اصفهان.xlsx  البرز.xlsx  ایلام.xlsx  بوشهر.xlsx  تهران.xlsx  خراسان جنوبی.xlsx  خراسان رضوی.xlsx  خراسان شمالی.xlsx  خوزستان.xlsx  زنجان.xlsx  سمنان.xlsx  سیستان و بلوچستان.xlsx  فارس.xlsx  قزوین.xlsx  قم.xlsx  لرستان.xlsx  مازندران.xlsx  مرکزیی لیدهای .xlsx  هرمزگان.xlsx  همدان.xlsx  چهار محال بختیاری.xlsx  کردستان.xlsx  کرمان.xlsx  کرمانشاه.xlsx  کهکلویه و بویر احمد.xlsx  گلستان.xlsx  گیلان.xlsx  یزد.xlsx
scripts/: benchmark_analytics.py  calculate_rfm.py  check_products.py  check_rfm_status.py  fix_reimport_calls.py  import_and_snapshot.py  import_call_logs.py  import_data.py  import_leads.py  phase10_seed_and_enrich.py  phase12_link_and_rfm.py  phase13_team_setup.py  recalculate_rfm.py  run_test.py  seed_products.py  seed_salespeople.py  seed_sms_templates.py  sync_mongodb_crm.py  test_e2e.py  test_imports.py
src/: __init__.py
src/api/: cache_routes.py  dependencies.py  main.py  metrics.py  schemas.py  search.py  websocket.py  ws_events.py
src/core/: __init__.py  cache.py  config.py  logging.py  perf_utils.py
src/infrastructure/: __init__.py  redis_pool.py
src/modules/: __init__.py
src/tasks/: ws_kpi_beat.py
src/web/: __init__.py  (+2 more)
tests/: conftest.py
(+344 files in other folders)
